// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimeItem /> can be rendered on android 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderBottomColor": "#fafafa",
      "borderBottomWidth": 1,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 20,
    }
  }
  testID="time-item-android-touchable-test"
>
  <Text
    style={
      Object {
        "fontSize": 24,
        "paddingBottom": 10,
      }
    }
  >
    When it starts
  </Text>
  <Text
    style={
      Object {
        "fontSize": 18,
      }
    }
  >
    20:30
  </Text>
</View>
`;

exports[`<TimeItem /> can be rendered on ios 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#fafafa",
      "borderBottomWidth": 1,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "paddingHorizontal": 10,
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 24,
        "paddingBottom": 10,
      }
    }
  >
    When it starts
  </Text>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    testID="time-item-ios-time-picker-test"
    underlineColorAndroid="transparent"
    value="Sun Jan 10 2021 20:30:00 GMT+0000 (Coordinated Universal Time)"
  />
</View>
`;

exports[`<TimeItem /> can be rendered when not ready on android 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderBottomColor": "#fafafa",
      "borderBottomWidth": 1,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 20,
    }
  }
  testID="time-item-android-touchable-test"
>
  <Text
    style={
      Object {
        "fontSize": 24,
        "paddingBottom": 10,
      }
    }
  >
    When it starts
  </Text>
</View>
`;

exports[`<TimeItem /> can be rendered when not ready on ios 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#fafafa",
      "borderBottomWidth": 1,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "paddingHorizontal": 10,
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 24,
        "paddingBottom": 10,
      }
    }
  >
    When it starts
  </Text>
</View>
`;
